--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,13 +12,15 @@
 body{
     background: #FFFFFF;
 }
+
+/* SIDE BAR */
 .wrapper{
     display: flex;
     position: relative;
 }
 .wrapper .sidebar{
     position: fixed;
-    width: 280px;
+    width: 250px;
     height: 100%;
     background: #354052;
     padding: 30px 0;
@@ -57,20 +59,37 @@ body{
     background-color: rgba(0, 0, 0, 0.25);
 }
 .wrapper .sidebar ul li a{
+    display: block;
     color: #FFFFFF;
 }
 .wrapper .sidebar ul li{
     padding: 12px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-    border-top: 1px solid rgba(0, 0, 0, 0.05);
+    padding-left: 30px;
 
-    font-size: 28px;
+    font-size: 22px;
     font-weight: 400;
     color: #FFFFFF;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    text-align: center;
+}
+.wrapper .sidebar ul li .fas{
+    width: 45px;
 }
 .wrapper .sidebar ul li a:hover{    
     font-weight: 700;
     color: #3498DB;
+}
+/* HEADER */
+.wrapper .main_content{
+    width: 100%;
+    margin-left: 200px;
+}
+.wrapper .main_content .header{
+    width: 100%;
+    height: 50px;
+    background: rgba(44, 62, 80, 1);
+    
+    padding-top: 5px;
+    font-family: 'Roboto Slab', serif;
+    color: #FFFFFF;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
