--- a/CSS/courses.css
+++ b/CSS/courses.css
@@ -10,7 +10,7 @@
     font-family: 'Roboto', sans-serif;
 }
 body{
-    background: #FFFFFF;
+    background: #e7e6e1;
 }
 
 /* SIDE BAR */
@@ -22,7 +22,7 @@ body{
     position: fixed;
     width: 250px;
     height: 100%;
-    background: #354052;
+    background: #314e52;
     padding: 30px 0;
 }
 .profile{
@@ -40,7 +40,7 @@ body{
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: 42;
-    color: #FFFFFF;
+    color: #f7f6e7;
     text-shadow: 0px 4px rgba(0, 0, 0, 0.25);
     text-align: center;
 }
@@ -48,7 +48,7 @@ body{
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: 24;
-    color: #FFFFFF;
+    color: #f7f6e7;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     text-align: center;
     margin-bottom: 20px;
@@ -60,7 +60,7 @@ body{
 }
 .wrapper .sidebar ul li a{
     display: block;
-    color: #FFFFFF;
+    color: #f7f6e7;
 }
 .wrapper .sidebar ul li{
     padding: 12px;
@@ -68,15 +68,16 @@ body{
 
     font-size: 22px;
     font-weight: 400;
-    color: #FFFFFF;
+    color: #f7f6e7;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .wrapper .sidebar ul li .fas{
     width: 45px;
 }
+
 .wrapper .sidebar ul li a:hover{    
     font-weight: 700;
-    color: #3498DB;
+    color: #f2a154;
 }
 /* HEADER */
 .wrapper .main_content{
@@ -86,10 +87,19 @@ body{
 .wrapper .main_content .header{
     width: 100%;
     height: 50px;
-    background: rgba(44, 62, 80, 1);
+    background: #f2a154;
     
     padding-top: 5px;
     font-family: 'Roboto Slab', serif;
-    color: #FFFFFF;
+    color: #f7f6e7;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.wrapper .main_content .header h2{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    font-size: 38;
+    color: #f7f6e7;
+    text-shadow: 0px 4px rgba(0, 0, 0, 0.25);
+    text-align: center;
 }
