--- a/CSS/login-page.css
+++ b/CSS/login-page.css
@@ -2,49 +2,105 @@
 @import url('https://fonts.google.com/specimen/Roboto+Slab');
 
 *{
+    box-sizing: border-box;
+}
+body,html{
+    height: 100%;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
     font-family: 'Roboto', sans-serif;
 }
-body {
-    background: #eedec5;
+.background-image{
+    /* 
+    Background from: 
+    https://unsplash.com/photos/kB61v9CXdus?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink 
+    */
+    background-image: url('../HTML/img/maple-bg.jpg');
+    -webkite-background-size: cover;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    height: 100%;
+    filter: blur(1px);
 }
 
-/* LOGIN HEADER */
-.jumbotron{
-    background-color:#E58943;
-    text-align:center;
-}
-
-.jumbotron h1 {
+.loginBox{
+    width: 320px;
+    height: 400px;
+    border-radius: 5%;
+    background: #0f0f0f;
     color: #fff;
-    font-size: 400%;
-    font-family: 'Roboto Slab', serif;
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    box-sizing: border-box;
+    padding: 70px 30px;
+}
+
+.loginBox p{
+    margin: 0;
+    padding: 0;
+}
+
+.loginBox h2{
+    font-size: 24px;
+    font-weight: 700;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.jumbotron p {
+.loginBox h3{
+    font-size: 18px;
+    font-weight: 400;
+    text-shadow: 0px 4px rgba(0, 0, 0, 0.25);
+}
+
+.loginBox input{
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.loginBox input[type="text"], input[type="password"]
+{
+    border: none;
+    border-bottom: 1px solid #fff;
+    background: transparent;
+    outline: none;
+    height: 40px;
+    color: #f2a154;
+    font-size: 16px;
+}
+
+.loginBox input[type="submit"]
+{
+    border: none;
+    background: #fb743e;
+    outline: none;
     color: #fff;
-    font-size: 100%;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-size: 20px;
+    border-radius: 10px;
 }
 
-/* LOGIN FOOTER */
-
-.footer {
-    background-color: #f3ae7a;
-    color: white;
-    text-align: center;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    font-size: 110%;
+.loginBox input[type="submit"]:hover
+{
+    cursor: pointer;
+    background: #f7f6e7;
+    color: #000;
+    font-size: 20px;
+    border-radius: 10px;
+}
+#avatar{
+    width: 100px;
+    height:100px;
+    border-radius: 50%;
+    position: absolute;
+    top: -30px;
+    left: calc(50% - 50px);
 }
 
 /* ANIMATION */
 .rotate {
-    animation: rotation 5s infinite linear
+    animation: rotation 2s
 }
 
 @keyframes rotation {
