--- a/CSS/discussions.css
+++ b/CSS/discussions.css
@@ -1,33 +1,70 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @import url('https://fonts.google.com/specimen/Roboto+Slab');
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
+body {
     font-family: 'Roboto', sans-serif;
-}
-body{
     background: #e7e6e1;
 }
 
-/* SIDE BAR */
-.wrapper{
-    display: flex;
-    position: relative;
+p {
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.1em;
+    font-weight: 400;
+    line-height: 1.7em;
+    color: rgba(0, 0, 0, 0.5);
 }
-.wrapper .sidebar{
-    position: fixed;
+
+a,
+a:hover,
+a:focus {
+    color: inherit;
+    text-decoration: none;
+    transition: all 0.3s;
+}
+
+.navbar {
+    background: #f2a154;
+    border: none;
+    border-radius: 0;
+    margin-bottom: 40px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+.navbar-btn {
+    box-shadow: none;
+    outline: none !important;
+    border: none;
+}
+
+.line {
+    width: 100%;
+    height: 1px;
+    border-bottom: 1px dashed #ddd;
+    margin: 40px 0;
+}
+
+/* ---------------------------------------------------
+    SIDEBAR STYLE
+----------------------------------------------------- */
+
+#sidebar {
     width: 250px;
-    height: 100%;
+    position: fixed;
+    top: 0;
+    left: -250px;
+    height: 100vh;
+    z-index: 999;
     background: #314e52;
-    padding: 30px 0;
+    font-family: "Roboto", "sans-serif";
+    color: #fff;
+    transition: all 0.3s;
+    overflow-y: scroll;
+    outline: none;
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
 }
 .profile{
-    width: 187px;
-    height: 184px;
+    width: 180px;
+    height: 180px;
     overflow: hidden;
     border-radius: 50%;
 }
@@ -36,7 +73,8 @@ body{
     width: 100%;
     height: 100%;
 }
-.wrapper .sidebar h2{
+
+#sidebar .sidebar-header h2{
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: 42;
@@ -44,62 +82,124 @@ body{
     text-shadow: 0px 4px rgba(0, 0, 0, 0.25);
     text-align: center;
 }
-.wrapper .sidebar h3{
+
+#sidebar .sidebar-header h3{
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
-    font-size: 24;
+    font-size: 15;
     color: #f7f6e7;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     text-align: center;
-    margin-bottom: 20px;
 }
+
+#sidebar.active {
+    left: 0;
+}
+
+#dismiss {
+    width: 35px;
+    height: 35px;
+    line-height: 35px;
+    text-align: center;
+    background: #314e52;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    -webkit-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+#dismiss:hover {
+    color: #f2a154;
+}
+
+.overlay {
+    display: none;
+    position: fixed;
+    width: 100vw;
+    height: 100%;
+    top: 0px;
+    background: rgba(0, 0, 0, 0.7);
+    z-index: 998;
+    opacity: 0;
+    transition: all 0.5s ease-in-out;
+}
+
+.overlay.active {
+    display: block;
+    opacity: 1;
+}
+
+#sidebar .sidebar-header {
+    padding: 25px;
+    background: #314e52;
+}
+
 .wrapper .sidebar hr{
     height: 2px;
     border-width: 0;
     background-color: rgba(0, 0, 0, 0.25);
 }
-.wrapper .sidebar ul li a{
-    display: block;
-    color: #f7f6e7;
-}
-.wrapper .sidebar ul li{
-    padding: 12px;
-    padding-left: 30px;
 
+#sidebar ul p {
+    color: #fff;
+    padding: 10px;
+}
+#sidebar ul li{
+    padding: 10px;
+    padding-left: 30px;
+    font-family: 'Roboto', sans-serif;
     font-size: 22px;
     font-weight: 400;
     color: #f7f6e7;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-.wrapper .sidebar ul li .fas{
+
+#sidebar ul li a {
+    display: block;
+    color: #f7f6e7;
+}
+
+#sidebar ul li .fas{
     width: 45px;
 }
 
-.wrapper .sidebar ul li a:hover{    
+#sidebar ul li a:hover {
     font-weight: 700;
     color: #f2a154;
 }
-/* HEADER */
-.wrapper .main_content{
-    width: 100%;
-    margin-left: 200px;
-}
-.wrapper .main_content .header{
-    width: 100%;
-    height: 50px;
-    background: #f2a154;
-    
-    padding-top: 5px;
-    font-family: 'Roboto Slab', serif;
-    color: #f7f6e7;
+
+/* ---------------------------------------------------
+    CONTENT STYLE
+----------------------------------------------------- */
+#sidebarCollapse{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    font-size: 24px;
+    color: #FFF;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.wrapper .main_content .header h2{
+#content {
+    width: 100%;
+    padding: 50px;
+    transition: all 0.3s;
+    align-items: justify;
+    position: absolute;
+    top: 50px;
+    right: 0;
     font-family: 'Roboto', sans-serif;
-    font-weight: 700;
-    font-size: 38;
-    color: #f7f6e7;
-    text-shadow: 0px 4px rgba(0, 0, 0, 0.25);
-    text-align: center;
+}
+
+#page #navbar-header h3{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 600;
+    font-size: 28px;
+    padding-top: 5px;
+    letter-spacing: 2px;
+    color: #FFF;
+    text-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25);
+
 }
