--- a/CSS/home.css
+++ b/CSS/home.css
@@ -59,11 +59,12 @@ a:focus {
     color: #fff;
     transition: all 0.3s;
     overflow-y: scroll;
+    outline: none;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
 }
 .profile{
-    width: 187px;
-    height: 184px;
+    width: 180px;
+    height: 180px;
     overflow: hidden;
     border-radius: 50%;
 }
@@ -89,7 +90,6 @@ a:focus {
     color: #f7f6e7;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     text-align: center;
-    margin-bottom: 20px;
 }
 
 #sidebar.active {
@@ -119,19 +119,21 @@ a:focus {
     display: none;
     position: fixed;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
+    top: 0px;
     background: rgba(0, 0, 0, 0.7);
     z-index: 998;
     opacity: 0;
     transition: all 0.5s ease-in-out;
 }
+
 .overlay.active {
     display: block;
     opacity: 1;
 }
 
 #sidebar .sidebar-header {
-    padding: 20px;
+    padding: 25px;
     background: #314e52;
 }
 
@@ -172,15 +174,32 @@ a:focus {
 /* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
+#sidebarCollapse{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    font-size: 24px;
+    color: #FFF;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
 
 #content {
     width: 100%;
-    padding: 20px;
-    min-height: 100vh;
+    padding: 50px;
     transition: all 0.3s;
+    align-items: justify;
     position: absolute;
-    top: 0;
+    top: 50px;
     right: 0;
-
     font-family: 'Roboto', sans-serif;
+}
+
+#page #navbar-header h3{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 600;
+    font-size: 28px;
+    padding-top: 5px;
+    letter-spacing: 2px;
+    color: #FFF;
+    text-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25);
+
 }
