--- a/CSS/login-page.css
+++ b/CSS/login-page.css
@@ -15,13 +15,13 @@ body,html{
     Background from: 
     https://unsplash.com/photos/kB61v9CXdus?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink 
     */
-    background-image: url('../HTML/img/maple-bg.jpg');
+    background-image: url('../HTML/img/maple-bg_blurred.jpg');
     -webkite-background-size: cover;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
     height: 100%;
-    filter: blur(1px);
+    /* filter: blur(1px); */
 }
 
 .loginBox{
@@ -46,7 +46,8 @@ body,html{
 .loginBox h2{
     font-size: 24px;
     font-weight: 700;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    color: #FCA926;
+    text-shadow: 0px 1px 2px rgb(197, 161, 119);
 }
 
 .loginBox h3{
@@ -100,7 +101,8 @@ body,html{
 
 /* ANIMATION */
 .rotate {
-    animation: rotation 2s
+    animation: rotation 2s;
+    animation-delay: 500ms;
 }
 
 @keyframes rotation {
