--- a/CSS/questions.css
+++ b/CSS/questions.css
@@ -1,9 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @import url('https://fonts.google.com/specimen/Roboto+Slab');
+@import url('https://fonts.googleapis.com/css2?family=RocknRoll+One&display=swap');
 
 body {
     font-family: 'Roboto', sans-serif;
     background: #e7e6e1;
+}
+
+h2 {
+    font-family: 'RocknRoll One', sans-serif;
 }
 
 p {
