--- a/server/views/home.jade
+++ b/server/views/home.jade
@@ -91,17 +91,5 @@ html
     script(src='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js')
     // Bootstrap bundle CDN
     script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js' integrity='sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0' crossorigin='anonymous')
-    script(type='text/javascript').
-      $(document).ready(function () {
-      $("#sidebar").mCustomScrollbar({
-      theme: "minimal"
-      });
-      $('#dismiss, .overlay').on('click', function () {
-      $('#sidebar').removeClass('active');
-      $('.overlay').removeClass('active');
-      });
-      $('#sidebarCollapse').on('click', function () {
-      $('#sidebar').addClass('active');
-      $('.overlay').addClass('active');
-      });
-      });
+    // Sidebar Animation
+    script(type='text/javascript' src='/javascripts/sidebar.js')
