--- a/server/views/login.jade
+++ b/server/views/login.jade
@@ -23,6 +23,6 @@ html(lang='en')
         input(type='text' name='' placeholder='')
         p Password
         input(type='password' name='' placeholder='')
-        input(type='submit' name='' value='Login' onclick='home')
+        input(type='submit' name='' value='Login')
     script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js' integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo' crossorigin='anonymous')
     script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js' integrity='sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0' crossorigin='anonymous')
