--- a/server/views/questions_ask.jade
+++ b/server/views/questions_ask.jade
@@ -123,7 +123,7 @@ html
                   | 7
                 a.list-group-item.list-group-item-action 13
             .mt-3.col-md-2
-              button.btn.btn-primary(type='button' onclick="window.location.href='question_success.html'" ;='') Submit
+              button.btn.btn-primary(type='button' onclick="window.location.href='question_success'" ;='') Submit
     .overlay
     // jQuery CDN - Slim version (=without AJAX)
     script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js' integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo' crossorigin='anonymous')
@@ -131,17 +131,5 @@ html
     script(src='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js')
     // Bootstrap bundle CDN
     script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js' integrity='sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0' crossorigin='anonymous')
-    script(type='text/javascript').
-      $(document).ready(function () {
-      $("#sidebar").mCustomScrollbar({
-      theme: "minimal"
-      });
-      $('#dismiss, .overlay').on('click', function () {
-      $('#sidebar').removeClass('active');
-      $('.overlay').removeClass('active');
-      });
-      $('#sidebarCollapse').on('click', function () {
-      $('#sidebar').addClass('active');
-      $('.overlay').addClass('active');
-      });
-      });
+    // Sidebar Animation
+    script(type='text/javascript' src='/javascripts/sidebar.js')
