--- a/server/public/stylesheets/questions_ask.css
+++ b/server/public/stylesheets/questions_ask.css
@@ -67,35 +67,6 @@ a:focus {
     outline: none;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
 }
-.profile{
-    width: 180px;
-    height: 180px;
-    overflow: hidden;
-    border-radius: 50%;
-}
-.profile img{
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-}
-
-#sidebar .sidebar-header h2{
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    font-size: 42;
-    color: #f7f6e7;
-    text-shadow: 0px 4px rgba(0, 0, 0, 0.25);
-    text-align: center;
-}
-
-#sidebar .sidebar-header h3{
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    font-size: 15;
-    color: #f7f6e7;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    text-align: center;
-}
 
 #sidebar.active {
     left: 0;
@@ -142,6 +113,36 @@ a:focus {
     background: #314e52;
 }
 
+#sidebar .sidebar-header h2{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 42;
+    color: #f7f6e7;
+    text-shadow: 0px 4px rgba(0, 0, 0, 0.25);
+    text-align: center;
+}
+
+#sidebar .sidebar-header h3{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 15;
+    color: #f7f6e7;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    text-align: center;
+}
+
+.profile{
+    width: 180px;
+    height: 180px;
+    overflow: hidden;
+    border-radius: 50%;
+}
+.profile img{
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+}
+
 .wrapper .sidebar hr{
     height: 2px;
     border-width: 0;
@@ -164,6 +165,7 @@ a:focus {
 
 #sidebar ul li a {
     display: block;
+    width: 100%;
     color: #f7f6e7;
 }
 
@@ -176,37 +178,23 @@ a:focus {
     color: #f2a154;
 }
 
-/* ---------------------------------------------------
-    CONTENT STYLE
------------------------------------------------------ */
-#sidebarCollapse{
-    font-family: 'Roboto', sans-serif;
-    font-weight: 700;
-    font-size: 24px;
-    color: #FFF;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+#sidebar ul li.active>a,
+a[aria-expanded="true"] {
+    background: #314e52;
 }
 
-#content {
-    width: 100%;
-    padding: 50px;
-    transition: all 0.3s;
-    align-items: justify;
+a[data-toggle="collapse"] {
+    position: relative;
+}
+
+.dropdown-toggle::after {
+    display: block;
     position: absolute;
-    top: 50px;
-    right: 0;
-    font-family: 'Roboto', sans-serif;
+    right: 20px;
 }
 
-#page #navbar-header h3{
-    font-family: 'Roboto', sans-serif;
-    font-weight: 600;
-    font-size: 28px;
-    padding-top: 5px;
-    letter-spacing: 2px;
-    color: #FFF;
-    text-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25);
-
+ul ul a {
+    font-size: 0.8em !important;
 }
 
 /* ---------------------------------------------------
