--- a/server/public/stylesheets/settings_edit.css
+++ b/server/public/stylesheets/settings_edit.css
@@ -62,35 +62,6 @@ a:focus {
     outline: none;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
 }
-.profile{
-    width: 180px;
-    height: 180px;
-    overflow: hidden;
-    border-radius: 50%;
-}
-.profile img{
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-}
-
-#sidebar .sidebar-header h2{
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    font-size: 42;
-    color: #f7f6e7;
-    text-shadow: 0px 4px rgba(0, 0, 0, 0.25);
-    text-align: center;
-}
-
-#sidebar .sidebar-header h3{
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    font-size: 15;
-    color: #f7f6e7;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    text-align: center;
-}
 
 #sidebar.active {
     left: 0;
@@ -137,6 +108,36 @@ a:focus {
     background: #314e52;
 }
 
+#sidebar .sidebar-header h2{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 42;
+    color: #f7f6e7;
+    text-shadow: 0px 4px rgba(0, 0, 0, 0.25);
+    text-align: center;
+}
+
+#sidebar .sidebar-header h3{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 15;
+    color: #f7f6e7;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    text-align: center;
+}
+
+.profile{
+    width: 180px;
+    height: 180px;
+    overflow: hidden;
+    border-radius: 50%;
+}
+.profile img{
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+}
+
 .wrapper .sidebar hr{
     height: 2px;
     border-width: 0;
@@ -159,6 +160,7 @@ a:focus {
 
 #sidebar ul li a {
     display: block;
+    width: 100%;
     color: #f7f6e7;
 }
 
@@ -169,6 +171,25 @@ a:focus {
 #sidebar ul li a:hover {
     font-weight: 700;
     color: #f2a154;
+}
+
+#sidebar ul li.active>a,
+a[aria-expanded="true"] {
+    background: #314e52;
+}
+
+a[data-toggle="collapse"] {
+    position: relative;
+}
+
+.dropdown-toggle::after {
+    display: block;
+    position: absolute;
+    right: 20px;
+}
+
+ul ul a {
+    font-size: 0.8em !important;
 }
 
 /* ---------------------------------------------------
