--- a/server/views/questions.jade
+++ b/server/views/questions.jade
@@ -14,7 +14,6 @@ html
     link(rel='icon' type='image/png' href='/images/donut.png')
     // FONT AWESOME SCRIPT
     script(src='https://kit.fontawesome.com/c13290656a.js' crossorigin='anonymous')
-  body
     .wrapper
       // Sidebar
       nav#sidebar
@@ -34,22 +33,37 @@ html
             a(href='home')
               i.fas.fa-home
               | Home
-          li
-            a(href='courses')
+          li.active
+            a(href='#coursesSubmenu' data-toggle='collapse' aria-expanded='false')
               i.fas.fa-book
               | Courses
-          li
-            a(href='questions')
+              ul#coursesSubmenu.collapse.list-unstyled
+                li
+                  a(href='courses') Current Courses
+                li 
+                  a(href='#') Search Courses
+          li.active
+            a(href='#questionsSubmenu' data-toggle='collapse' aria-expanded='false')
               i.fas.fa-question-circle
               | Questions
+              ul#questionsSubmenu.collapse.list-unstyled
+                li
+                  a(href='questions') Ask a Question
+                li 
+                  a(href='#') Search Questions
           li
             a(href='professors')
               i.fas.fa-chalkboard-teacher
               | Professors
-          li
-            a(href='discussions')
+          li.active
+            a(href='#discussionsSubmenu' data-toggle='collapse' aria-expanded='false')
               i.fas.fa-comments
               | Discussions
+              ul#discussionsSubmenu.collapse.list-unstyled
+                li
+                  a(href='discussions') Discussion Board
+                li 
+                  a(href='#') Group Chats
         hr
         ul.list-unstyled.components
           li
@@ -148,10 +162,12 @@ html
                     a.page-link(href='#') Next
     .overlay
     // jQuery CDN - Slim version (=without AJAX)
-    script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js' integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo' crossorigin='anonymous')
+    script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js', integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo', crossorigin='anonymous')
+    // Popper.JS
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js', integrity='sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ', crossorigin='anonymous')
+    // Bootstrap JS
+    script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js', integrity='sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm', crossorigin='anonymous')
     // jQuery Custom Scroller CDN
     script(src='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js')
-    // Bootstrap bundle CDN
-    script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js' integrity='sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0' crossorigin='anonymous')
     // Sidebar Animation
     script(type='text/javascript' src='/javascripts/sidebar.js')
