--- a/server/public/stylesheets/home.css
+++ b/server/public/stylesheets/home.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @import url('https://fonts.google.com/specimen/Roboto+Slab');
 
+@import './layout/navbar.css';
+@import './layout/scrollbar.css';
+@import './layout/sidebar.css';
+
 body {
     font-family: 'Roboto', sans-serif;
     background: #0f0f0f;
@@ -20,191 +24,6 @@ a:focus {
     color: inherit;
     text-decoration: none;
     transition: all 0.3s;
-}
-
-/* ---------------------------------------------------
-    NAVBAR STYLE
------------------------------------------------------ */
-.navbar {
-    background: #252525;
-    border: none;
-    border-radius: 0;
-    margin-bottom: 40px;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-}
-/* Hamburger Menu */
-#sidebarCollapse{
-    font-family: 'Roboto', sans-serif;
-    font-weight: 700;
-    font-size: 22px;
-    color: #FCA926;
-    text-shadow: 0px 1px 1px rgb(197, 161, 119);
-    transition: 0.3s;
-}
-#sidebarCollapse:hover{ opacity: .5; }
-
-.logo img{
-    width: auto;
-    height: 50px;
-    transition: 0.3s;
-}
-.logo img:hover{ opacity: .5; }
-
-.navbar-btn {
-    box-shadow: none;
-    outline: none !important;
-    border: none;
-}
-
-.line {
-    width: 100%;
-    height: 1px;
-    border-bottom: 1px dashed #ddd;
-    margin: 40px 0;
-}
-
-
-/* ---------------------------------------------------
-    SIDEBAR STYLE
------------------------------------------------------ */
-
-#sidebar {
-    width: 250px;
-    position: fixed;
-    top: 0;
-    left: -250px;
-    height: 100vh;
-    z-index: 999;
-    background: #252525;
-    font-family: "Roboto", "sans-serif";
-    color: #fff;
-    transition: all 0.3s;
-    overflow-y: scroll;
-    outline: none;
-    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
-}
-
-#sidebar.active {
-    left: 0;
-}
-
-#dismiss {
-    width: 35px;
-    height: 35px;
-    line-height: 35px;
-    text-align: center;
-    background: #252525;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
-    -webkit-transition: all 0.3s;
-    -o-transition: all 0.3s;
-    transition: all 0.3s;
-}
-
-#dismiss:hover {
-    color: #f2a154;
-}
-
-.overlay {
-    display: none;
-    position: fixed;
-    width: 100vw;
-    height: 100%;
-    top: 0px;
-    background: rgba(0, 0, 0, 0.7);
-    z-index: 998;
-    opacity: 0;
-    transition: all 0.5s ease-in-out;
-}
-
-.overlay.active {
-    display: block;
-    opacity: 1;
-}
-
-#sidebar .sidebar-header {
-    padding: 25px;
-    background: #252525;
-}
-
-#sidebar .sidebar-header h2{
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    font-size: 42;
-    color: #f7f6e7;
-    text-shadow: 0px 4px rgba(0, 0, 0, 0.25);
-    text-align: center;
-}
-
-#sidebar .sidebar-header h3{
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    font-size: 15;
-    color: #f7f6e7;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.50);
-    text-align: center;
-}
-
-.profile{
-    width: 180px;
-    height: 180px;
-    overflow: hidden;
-    border-radius: 50%;
-}
-.profile img{
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-}
-
-#sidebar ul p {
-    color: #fff;
-    padding: 10px;
-}
-#sidebar ul li{
-    padding: 10px;
-    padding-left: 30px;
-    font-family: 'Roboto', sans-serif;
-    font-size: 22px;
-    font-weight: 400;
-    color: #f7f6e7;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-#sidebar ul li a {
-    display: block;
-    width: 100%;
-    color: #f7f6e7;
-}
-
-#sidebar ul li .fas{
-    width: 45px;
-}
-
-#sidebar ul li a:hover {
-    font-weight: 700;
-    color: #f2a054;
-}
-
-#sidebar ul li.active>a,
-a[aria-expanded="true"] {
-    background: #252525;
-}
-
-a[data-toggle="collapse"] {
-    position: relative;
-}
-
-.dropdown-toggle::after {
-    display: block;
-    position: absolute;
-    right: 20px;
-}
-
-ul ul a {
-    font-size: 0.8em !important;
 }
 
 /* ---------------------------------------------------
