--- a/server/views/settings_edit.jade
+++ b/server/views/settings_edit.jade
@@ -4,16 +4,29 @@ html
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
-    title Maple Donut
-    // CSS BOOTSTRAP LINK
+    title Maple Donut - Edit Settings
+
+    // 1,2 - CSS BOOTSTRAP LINK
+    // 3 - CUSTOM CSS LINKS
+    // 4 - FAVICON LINK
     link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' crossorigin='anonymous')
     link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl' crossorigin='anonymous')
-    // CUSTOM CSS LINK
     link(rel='stylesheet' href='/stylesheets/settings_edit.css')
-    // FAVICON LINK
     link(rel='icon' type='image/png' href='/images/donut.png')
-    // FONT AWESOME SCRIPT
+
+    // 1 - FONT AWESOME SCRIPT
+    // 2 - jQuery CDN - Slim version (=without AJAX)
+    // 3 - Popper.JS
+    // 4 - Bootstrap JS
+    // 5 - jQuery Custom Scroller CDN
+    // 6 - Sidebar Animation JS
     script(src='https://kit.fontawesome.com/c13290656a.js' crossorigin='anonymous')
+    script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js', integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo', crossorigin='anonymous')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js', integrity='sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ', crossorigin='anonymous')
+    script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js', integrity='sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm', crossorigin='anonymous')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js')
+    script(type='text/javascript' src='/javascripts/sidebar.js')
+
     .wrapper
       // Sidebar
       nav#sidebar
@@ -76,11 +89,13 @@ html
               | Logout
       // Page Content
       #page
-        nav.navbar.navbar-expand-md
+        nav.navbar.navbar-expand-ml
           #navbar-header.container-fluid
             a#sidebarCollapse(href='#')
               i.fas.fa-bars
-            h3.text-center EDIT SETTINGS
+            .logo
+              a(href='Home')
+                img(src='/images/maple-donut-logo.png')
             a(href='#')
         #content
           h2 Account Settings
@@ -112,13 +127,3 @@ html
             a.btn.btn-primary(href='settings') Save Changes
           .line
     .overlay
-    // jQuery CDN - Slim version (=without AJAX)
-    script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js', integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo', crossorigin='anonymous')
-    // Popper.JS
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js', integrity='sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ', crossorigin='anonymous')
-    // Bootstrap JS
-    script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js', integrity='sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm', crossorigin='anonymous')
-    // jQuery Custom Scroller CDN
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js')
-    // Sidebar Animation
-    script(type='text/javascript' src='/javascripts/sidebar.js')
