Added Additional Content to Professors Page

--- a/server/views/professors.jade
+++ b/server/views/professors.jade
@@ -131,5 +131,21 @@ html
                 input.searchInput(id='searchInput' type='text' placeholder='e.g. Brian Franczak')
                 a.searchIcon(href='#')
                   i.fas.fa-search
-
-    .overlay
+          hr
+          h3.text-center Professors for Enrolled Courses
+          .d-flex.justify-content-center.h-100
+            .card
+              img(src='/images/choc-donut.png' alt='Avatar')
+              hr
+              .cardContainer
+                h3.text-center Brian Franczak
+                h4.text-center Statistics
+                p.text-center Assistant Professor
+            
+            .card
+              img(src='/images/jelly-donut.png' alt='Avatar')
+              hr
+              .cardContainer
+                h3.text-center Erwin Pascual
+                h4.text-center Computer Science
+                p.text-center Unemployed
