--- a/server/public/stylesheets/professors.css
+++ b/server/public/stylesheets/professors.css
@@ -84,22 +84,11 @@ a:focus {
 
 #content h3{
     font-family: 'Roboto', sans-serif;
-    font-weight: 700;
+    font-weight: 400;
     font-size: 22px;
-    letter-spacing: 2px;
-    color: #FCA926;
-    text-shadow: 0px 1px 2px rgb(197, 161, 119)
-}
-
-#page #navbar-header h3{
-    font-family: 'Roboto', sans-serif;
-    font-weight: 700;
-    font-size: 20px;
-    margin-top: 10px;
     letter-spacing: 1px;
     color: #FCA926;
-    text-shadow: 0px 1px 1px rgb(197, 161, 119);
-
+    text-shadow: 0px 1px 2px rgb(197, 161, 119)
 }
 
 /* ---------------------------------------------------
@@ -154,4 +143,53 @@ a:focus {
     border-radius: 50%;
     color:white;
     text-decoration:none;
+}
+
+/* ---------------------------------------------------
+    CARD STYLE
+----------------------------------------------------- */
+
+.card{
+    margin: 10px;
+    width: 200px;
+    background-color: #252525;
+    box-shadow: 0 2px 4px 0 rgba(211,211,211,0.2);
+    transition: 0.3s;
+    border-radius: 5px;    
+}
+
+.card img{
+    padding: 5px;
+}
+
+.card:hover {
+    background-color: #353b48;
+    opacity: 0.8;
+    box-shadow: 0 0px 8px 0 #FCA926;
+}
+
+.cardContainer {
+    padding: 2px 8px;
+}
+
+#content .cardContainer h3{
+    margin-bottom: 0px;
+    font-weight: 400;
+    color: #FCA926;
+    text-shadow: 0px 1px 2px rgb(197, 161, 119);
+    letter-spacing: 1px;
+    
+}
+
+#content .cardContainer h4{
+    margin-bottom: 0px;
+    font-weight: 400;
+    font-size: 20px;
+    color: rgba(211, 211, 211, 0.8);
+}
+
+#content .cardContainer p{
+    font-weight: 400;
+    font-size: 16px;
+    color: rgba(211, 211, 211, 0.8);
 }
