--- a/server/views/login.jade
+++ b/server/views/login.jade
@@ -14,7 +14,7 @@ html(lang='en')
     link(rel='stylesheet' type='text/css' href='/stylesheets/login-page.css')
     link(rel='icon' type='image/png' href='/images/donut.png')
 
-    // BOOTSTRAP LINKS
+    // JQUERY LINKS
     script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js' integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo' crossorigin='anonymous')
     script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js' integrity='sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0' crossorigin='anonymous')
     
@@ -24,8 +24,6 @@ html(lang='en')
     script(type='text/javascript' src='/javascripts/google.js')
     script(type='text/javascript').
       var startApp = initSignIn();
-
-  body
     .background-image
     .loginBox
       img#avatar.rotate(src='/images/donut.png')
