Remove example courses

--- a/server/views/courses.jade
+++ b/server/views/courses.jade
@@ -134,10 +134,12 @@ html
             .col-md-3 
               form.card.p-3.bg-light
                 .list-group-flush 
+                
                   h2.text-left Your Courses
-                  a.list-group-item.list-group-item-action(href='#') Course A
-                  a.list-group-item.list-group-item-action(href='#') Course B
-                  a.list-group-item.list-group-item-action(href='#') Course C
-                  a.list-group-item.list-group-item-action(href='#') Course D
-                  a.list-group-item.list-group-item-action(href='#') Course E
+                  // ideally we have a for loop here  for each course
+                    a.list-group-item.list-group-item-action(href='#') Course A
+                    a.list-group-item.list-group-item-action(href='#') Course B
+                    a.list-group-item.list-group-item-action(href='#') Course C
+                    a.list-group-item.list-group-item-action(href='#') Course D
+                    a.list-group-item.list-group-item-action(href='#') Course E
     .overlay
