--- a/server/views/courses.jade
+++ b/server/views/courses.jade
@@ -62,8 +62,8 @@ html
             .profile
               .row.justify-content-center
                 img(src='/images/donut.png')
-          h2.text-center  Username 
-          h3.text-center  Biography 
+          h2.text-center  Username
+          h3.text-center  Biography
         hr
         ul.list-unstyled.components
           li
@@ -77,7 +77,7 @@ html
               ul#coursesSubmenu.collapse.list-unstyled
                 li
                   a(href='courses') Current Courses
-                li 
+                li
                   a(href='#') Search Courses
           li.active
             a(href='#questionsSubmenu' data-toggle='collapse' aria-expanded='false')
@@ -86,7 +86,7 @@ html
               ul#questionsSubmenu.collapse.list-unstyled
                 li
                   a(href='questions') Ask a Question
-                li 
+                li
                   a(href='#') Search Questions
           li
             a(href='professors')
@@ -99,7 +99,7 @@ html
               ul#discussionsSubmenu.collapse.list-unstyled
                 li
                   a(href='discussions') Discussion Board
-                li 
+                li
                   a(href='#') Group Chats
         hr
         ul.list-unstyled.components
@@ -122,19 +122,21 @@ html
                 img(src='/images/maple-donut-logo.png')
             a(href='#')
         #content
+
           #course_container
-            .col-md-3 
+            .col-md-3
               form.card.p-3.bg-light
-                h2.text-left Search For A Course 
+                h2.text-left Search For A Course
+                 | !{locals.data}
                 .input-group
                   input#searchInput.form-control.py-2.border-right-0.border(type='search' value='Input your question here!')
                   span.input-group-append(onclick="window.location.href='questions_ask';")
                     button.btn.btn-outline-secondary.border-left-0.border(type='button')
-                      i.fa.fa-search    
-            .col-md-3 
+                      i.fa.fa-search
+            .col-md-3
               form.card.p-3.bg-light
-                .list-group-flush 
-                
+                .list-group-flush
+
                   h2.text-left Your Courses
                   // ideally we have a for loop here  for each course
                     a.list-group-item.list-group-item-action(href='#') Course A
