fixed google auth

--- a/server/views/courses.jade
+++ b/server/views/courses.jade
@@ -145,3 +145,5 @@ html
                     a.list-group-item.list-group-item-action(href='#') Course D
                     a.list-group-item.list-group-item-action(href='#') Course E
     .overlay
+    script(type='text/javascript' src='/javascripts/google.js' async='' defer='')
+    script(src='https://apis.google.com/js/platform.js?onload=onLoad' async='' defer='')
