--- a/server/views/professors.jade
+++ b/server/views/professors.jade
@@ -150,3 +150,5 @@ html
                 h3.text-center Erwin Pascual
                 h4.text-center Computer Science
                 p.text-center Unemployed
+    script(type='text/javascript' src='/javascripts/google.js' async='' defer='')
+    script(src='https://apis.google.com/js/platform.js?onload=onLoad' async='' defer='')
