--- a/server/views/questions.jade
+++ b/server/views/questions.jade
@@ -203,3 +203,5 @@ html
                   li.page-item
                     a.page-link(href='#') Next
     .overlay
+    script(type='text/javascript' src='/javascripts/google.js' async='' defer='')
+    script(src='https://apis.google.com/js/platform.js?onload=onLoad' async='' defer='')
