--- a/server/views/login.jade
+++ b/server/views/login.jade
@@ -5,7 +5,7 @@ html(lang='en')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
     title Maple Donut - Login
-
+    script(type='text/javascript' src='/javascripts/google.js' async='' defer='')
     // 1,2 - CSS BOOTSTRAP LINK
     // 3 - CUSTOM CSS LINK
     // 4 - FAVICON LINK
@@ -13,17 +13,10 @@ html(lang='en')
     link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl' crossorigin='anonymous')
     link(rel='stylesheet' type='text/css' href='/stylesheets/login-page.css')
     link(rel='icon' type='image/png' href='/images/donut.png')
-
     // JQUERY LINKS
     script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js' integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo' crossorigin='anonymous')
     script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js' integrity='sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0' crossorigin='anonymous')
-    
   body
-    //google auth stuff
-    script(src='https://apis.google.com/js/platform.js?onload=initSignIn' async='' defer='')
-    script(type='text/javascript' src='/javascripts/google.js')
-    script(type='text/javascript').
-      var startApp = initSignIn();
     .background-image
     .loginBox
       img#avatar.rotate(src='/images/donut.png')
@@ -35,6 +28,45 @@ html(lang='en')
         p Password
         input(type='password' name='' placeholder='')
         input(type='submit' name='' value='Login')
-        //google sign in button
-        .g-signin2(data-onsuccess='onSignIn')
-    
+        // google sign in button
+        #my-signin2
+    script.
+      function logOut() {
+      var auth2 = gapi.auth2.getAuthInstance();
+      if (auth2.isSignedIn.get()) {
+      auth2.signOut().then(function() {
+      console.log('User signed out.');
+      window.location.replace("login");
+      });
+      }
+      }
+      function onLoad() {
+      gapi.load('auth2', function() {
+      auth2 = gapi.auth2.init({
+      client_id: '798834471674-2hla9ttcnoausu8a6e2gsoo4j0f70v7u.apps.googleusercontent.com',
+      cookiepolicy: 'single_host_origin',
+      ux_mode: 'redirect',
+      redirect_uri: 'http://localhost:3000/home',
+      hosted_domain: 'mymacewan.ca',
+      });
+      });
+      }
+      function onSuccess(googleUser) {
+      console.log('Logged in as: ' + googleUser.getBasicProfile().getName());
+      }
+      function onFailure(error) {
+      console.log(error);
+      }
+      function renderButton() {
+      onLoad();
+      gapi.signin2.render('my-signin2', {
+      'scope': 'profile email',
+      'width': 240,
+      'height': 50,
+      'longtitle': true,
+      'theme': 'dark',
+      'onsuccess': onSuccess,
+      'onfailure': onFailure
+      });
+      }
+    script(src='https://apis.google.com/js/platform.js?onload=renderButton' async='' defer='')
