added a chat page and the routing/menu  links to get there

--- a/server/views/home.jade
+++ b/server/views/home.jade
@@ -100,7 +100,7 @@ html
                 li
                   a(href='discussions') Discussion Board
                 li 
-                  a(href='#') Group Chats
+                  a(href='messages') Group Chats
         hr
         ul.list-unstyled.components
           li
