--- a/server/views/questions.jade
+++ b/server/views/questions.jade
@@ -103,7 +103,7 @@ html
                 li
                   a(href='discussions') Discussion Board
                 li 
-                  a(href='#') Group Chats
+                  a(href='messages') Group Chats
         hr
         ul.list-unstyled.components
           li
