Styled Current Courses

--- a/server/views/queues.jade
+++ b/server/views/queues.jade
@@ -126,10 +126,10 @@ html
           // Search bar
           h3.text-center Available Professors
 
-          .d-flex.justify-content
+          .d-flex.justify-content-center
             for names in locals.data
               .card
-                img(src='/images/profile.png' alt='Avatar')
+                img(src='/images/person.png' alt='Avatar')
                 hr
                 .cardContainer
                   if names.available == 1
@@ -158,5 +158,7 @@ html
                 h3.text-center Erwin Pascual
                 h4.text-center Computer Science
                 p.text-center Unemployed
+    .overlay
+    
     script(type='text/javascript' src='/javascripts/google.js' async='' defer='')
     script(src='https://apis.google.com/js/platform.js?onload=onLoad' async='' defer='')
