--- a/server/views/chat.jade
+++ b/server/views/chat.jade
@@ -126,6 +126,8 @@ html
             .content-section-title messages
             ul
               li.message
+                img(src='/images/letters/letter-s.svg' alt='lettericon' width='40' height='40')
+                .divider
                 .messagegroup
                   | Group 1
                 span.status
@@ -135,6 +137,8 @@ html
                   button.content-button.status-button.open Open
                   .menu
               li.message
+                img(src='/images/letters/letter-f.svg' alt='lettericon' width='40' height='40')
+                .divider
                 .messagegroup
                   | Group 2
                 span.status
@@ -144,6 +148,41 @@ html
                   button.content-button.status-button Open
                   .menu
               li.message
+                img(src='/images/letters/letter-z.svg' alt='lettericon' width='40' height='40')
+                .divider
+                .messagegroup
+                  | Group 3
+                span.status
+                  span.status-circle.green
+                  |         message snippet here
+                .button-wrapper
+                  button.content-button.status-button.open Open
+                  .menu
+              li.message
+                img(src='/images/letters/letter-h.svg' alt='lettericon' width='40' height='40')
+                .divider
+                .messagegroup
+                  | Group 3
+                span.status
+                  span.status-circle.green
+                  |         message snippet here
+                .button-wrapper
+                  button.content-button.status-button.open Open
+                  .menu
+              li.message
+                img(src='/images/letters/letter-a.svg' alt='lettericon' width='40' height='40')
+                .divider
+                .messagegroup
+                  |  Group 3
+                span.status
+                  span.status-circle.green
+                  |         message snippet here
+                .button-wrapper
+                  button.content-button.status-button.open Open
+                  .menu
+              li.message
+                img(src='/images/letters/letter-o.svg' alt='lettericon' width='40' height='40')
+                .divider
                 .messagegroup
                   | Group 3
                 span.status
