--- a/server/views/professors.jade
+++ b/server/views/professors.jade
@@ -87,7 +87,7 @@ html
                 li
                   a(href='questions') Ask a Question
                 li
-                  a(href='messages') Search Questions
+                  a(href='chat') Search Questions
           li
             a(href='professors')
               i.fas.fa-chalkboard-teacher
