--- a/server/views/courses.jade
+++ b/server/views/courses.jade
@@ -100,7 +100,7 @@ html
                 li
                   a(href='discussions') Discussion Board
                 li
-                  a(href='#') Group Chats
+                  a(href='chat') Group Chats
         hr
         ul.list-unstyled.components
           li
