--- a/server/views/home.jade
+++ b/server/views/home.jade
@@ -100,7 +100,7 @@ html
                 li
                   a(href='discussions') Discussion Board
                 li 
-                  a(href='messages') Group Chats
+                  a(href='chat') Group Chats
         hr
         ul.list-unstyled.components
           li
