--- a/server/public/stylesheets/chat.css
+++ b/server/public/stylesheets/chat.css
@@ -22,23 +22,13 @@ html {
 body {
     font-family: "Poppins", sans-serif;
     background: #0f0f0f;
-    /*
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 2em;
-    width: 100%;
-    height: 100vh;*/
 }
 @media screen and (max-width: 480px) {
     body {
         padding: 0.8em;
    }
 }
-.content-button {
+.message-button {
     background-color: #3a6df0;
     border: none;
     padding: 8px 26px;
@@ -49,30 +39,33 @@ body {
     transition: 0.3s;
     white-space: nowrap;
 }
-.content-section {
-    margin-top: 30px;
+.message-section {
     display: flex;
     flex-direction: column;
+    height: 100%;
+    width: 100vh;
 }
-.content-section-title {
+.message-section-title {
     color: var(--content-title-color);
     margin-bottom: 14px;
 }
-.content-section ul {
+.message-section ul {
     color: var(--content-title-color);
     display: flex;
     flex-direction: column;
-    width: 50%;
-    height: 100%;
+    width: 100%;
+    max-height: 79vh;
     justify-content: space-around;
     background-color: var(--content-bg);
     padding-left: 0;
     margin: 0;
-    border-radius: 14px;
+    border-radius: 4px;
     border: 1px solid var(--theme-bg-color);
     cursor: pointer;
+    overflow:hidden;
+    overflow-y:scroll;
 }
-.content-section ul li {
+.message-section ul li {
     list-style: none;
     padding: 10px 18px;
     display: flex;
@@ -83,16 +76,16 @@ body {
     white-space: nowrap;
     transition: 0.3s;
 }
-.content-section ul li:hover {
+.message-section ul li:hover {
     background-color: var(--theme-bg-color);
 }
-.content-section ul li:hover:first-child {
+.message-section ul li:hover:first-child {
     border-radius: 13px 13px 0 0;
 }
-.content-section ul li:hover:last-child {
+.message-section ul li:hover:last-child {
     border-radius: 0 0 13px 13px;
 }
-.content-section ul li + li {
+.message-section ul li + li {
     border-top: 1px solid var(--border-color);
 }
 .divider{
@@ -172,6 +165,82 @@ body {
         width: auto;
    }
 }
+img{ max-width:100%;}
+.incoming_msg_img {
+  display: inline-block;
+}
+.received_msg {
+  display: inline-block;
+  padding: 0 0 0 5px;
+  vertical-align: top;
+  width: 92%;
+ }
+ .received_withd_msg p {
+  background: #ebebeb none repeat scroll 0 0;
+  border-radius: 3px;
+  color: #646464;
+  font-size: 14px;
+  margin: 0;
+  padding: 5px 10px 5px 12px;
+  width: 100%;
+}
+.time_date {
+  color: #747474;
+  display: block;
+  font-size: 12px;
+  margin: 8px 0 0;
+}
+.received_withd_msg { width: 57%;}
+.mesgs {
+  float: left;
+  padding: 30px 15px 0 25px;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+}
+
+ .sent_msg p {
+  background: #05728f none repeat scroll 0 0;
+  border-radius: 3px;
+  font-size: 14px;
+  margin: 0; color:#fff;
+  padding: 5px 10px 5px 12px;
+  width:100%;
+}
+.outgoing_msg{ overflow:hidden; margin:26px 0 26px;}
+.sent_msg {
+  float: right;
+  width: 46%;
+}
+.input_msg_write input {
+  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+  border: medium none;
+  color: #4c4c4c;
+  font-size: 15px;
+  min-height: 48px;
+  width: 100%;
+}
+
+.type_msg {border-top: 1px solid #c4c4c4;position: relative;}
+.msg_send_btn {
+  background: #05728f none repeat scroll 0 0;
+  border: medium none;
+  border-radius: 50%;
+  color: #fff;
+  cursor: pointer;
+  font-size: 17px;
+  height: 33px;
+  position: absolute;
+  right: 0;
+  top: 11px;
+  width: 33px;
+}
+.messaging { padding: 0 0 50px 0;}
+.msg_history {
+    max-height: 75vh;
+    overflow-y: auto;
+  }
+
 
 /*body {
     font-family: 'Roboto', sans-serif;
@@ -199,6 +268,8 @@ a:focus {
 ----------------------------------------------------- */
 
 #content {
+    display: flex;
+    flex-direction: row;
     width: 100%;
     padding: 50px;
     transition: all 0.3s;
